--- a/src/Alsein.Algorithms/Alsein.Algorithms.csproj
+++ b/src/Alsein.Algorithms/Alsein.Algorithms.csproj
@@ -1,13 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="..\..\Alsein.Algorithms.props" />
+
+  <PropertyGroup>
+    <Title>Alsein's Algorithm Libraries</Title>
+    <Description>Some algorithm features in addition to LINQ.</Description>
+    <IncludeBuildOutput>false</IncludeBuildOutput>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Alsein.Algorithms.Searching\Alsein.Algorithms.Searching.csproj" />
   </ItemGroup>
-
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
-    <NuspecFile>Alsein.Algorithms.nuspec</NuspecFile>
-    <AssemblyVersion>0.1.0</AssemblyVersion>
-  </PropertyGroup>
 
 </Project>
