--- a/Alsein.Algorithms.props
+++ b/Alsein.Algorithms.props
@@ -13,9 +13,10 @@
         <Authors>Alsein</Authors>
         <Copyright>Copyright &#x00A9; Alsein.  All rights reserved.</Copyright>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-        <PackageProjectUrl>https://github.com/AlseinX/Alsein.Algorithms</PackageProjectUrl>
-        <PackageLicenseUrl>$(PackageProjectUrl)/blob/master/LICENSE</PackageLicenseUrl>
-        <PackageIconUrl>https://raw.githubusercontent.com/AlseinX/Alsein.Algorithms/master/Alsein.png</PackageIconUrl>
+        <GitRepository>AlseinX/Alsein.Algorithms</GitRepository>
+        <PackageProjectUrl>https://github.com/$(GitRepository)</PackageProjectUrl>
+        <PackageLicenseUrl>https://raw.githubusercontent.com/$(GitRepository)/master/LICENSE</PackageLicenseUrl>
+        <PackageIconUrl>https://raw.githubusercontent.com/$(GitRepository)/master/Alsein.png</PackageIconUrl>
         <RepositoryUrl>$(PackageProjectUrl).git</RepositoryUrl>
         <MinClientVersion>3.4</MinClientVersion>
     </PropertyGroup>
