--- a/src/Alsein.Algorithms/Alsein.Algorithms.csproj
+++ b/src/Alsein.Algorithms/Alsein.Algorithms.csproj
@@ -3,6 +3,7 @@
   <Import Project="..\..\Alsein.Algorithms.props" />
 
   <PropertyGroup>
+    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
     <Title>Alsein's Algorithm Libraries</Title>
     <Description>Some algorithm features in addition to LINQ.</Description>
     <IncludeBuildOutput>false</IncludeBuildOutput>
